--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inotom/sws-drawer",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A web Components to add drawer element.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -58,7 +58,7 @@
     "typescript-lit-html-plugin": "0.9.0"
   },
   "dependencies": {
-    "lit-element": "3.0.2",
+    "lit": "2.0.2",
     "tslib": "2.3.1"
   }
 }
