--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inotom/sws-drawer",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "description": "A web Components to add drawer element.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -36,29 +36,29 @@
     "access": "public"
   },
   "devDependencies": {
-    "@rollup/plugin-buble": "1.0.0",
-    "@rollup/plugin-commonjs": "23.0.0",
-    "@rollup/plugin-node-resolve": "15.0.0",
-    "@types/node": "18.11.0",
-    "@typescript-eslint/eslint-plugin": "5.40.0",
-    "@typescript-eslint/parser": "5.40.0",
-    "eslint": "8.25.0",
-    "eslint-config-prettier": "8.5.0",
+    "@rollup/plugin-buble": "1.0.2",
+    "@rollup/plugin-commonjs": "25.0.3",
+    "@rollup/plugin-node-resolve": "15.1.0",
+    "@rollup/plugin-terser": "0.4.3",
+    "@types/node": "20.4.4",
+    "@typescript-eslint/eslint-plugin": "6.2.0",
+    "@typescript-eslint/parser": "6.2.0",
+    "eslint": "8.45.0",
+    "eslint-config-prettier": "8.8.0",
     "lodash.camelcase": "4.3.0",
     "lodash.upperfirst": "4.3.1",
-    "prettier": "2.7.1",
-    "rimraf": "3.0.2",
-    "rollup": "2.79.1",
-    "rollup-plugin-html2": "3.1.0",
+    "prettier": "3.0.0",
+    "rimraf": "5.0.1",
+    "rollup": "3.26.3",
+    "rollup-plugin-html2": "4.0.0",
     "rollup-plugin-livereload": "2.0.5",
-    "rollup-plugin-serve": "2.0.1",
-    "rollup-plugin-terser": "7.0.2",
-    "rollup-plugin-typescript2": "0.34.1",
-    "typescript": "4.8.4",
+    "rollup-plugin-serve": "2.0.2",
+    "rollup-plugin-typescript2": "0.35.0",
+    "typescript": "5.1.6",
     "typescript-lit-html-plugin": "0.9.0"
   },
   "dependencies": {
-    "lit": "2.4.0",
-    "tslib": "2.4.0"
+    "lit": "2.7.6",
+    "tslib": "2.6.1"
   }
 }
