--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@inotom/sws-drawer",
-  "version": "1.7.0",
+  "version": "1.8.0-beta.1",
   "description": "A web Components to add drawer element.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -36,29 +36,29 @@
     "access": "public"
   },
   "devDependencies": {
-    "@rollup/plugin-buble": "1.0.2",
-    "@rollup/plugin-commonjs": "25.0.3",
-    "@rollup/plugin-node-resolve": "15.1.0",
-    "@rollup/plugin-terser": "0.4.3",
-    "@types/node": "20.4.4",
-    "@typescript-eslint/eslint-plugin": "6.2.0",
-    "@typescript-eslint/parser": "6.2.0",
-    "eslint": "8.45.0",
-    "eslint-config-prettier": "8.8.0",
+    "@rollup/plugin-buble": "1.0.3",
+    "@rollup/plugin-commonjs": "25.0.7",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-terser": "0.4.4",
+    "@types/node": "20.11.20",
+    "@typescript-eslint/eslint-plugin": "7.0.2",
+    "@typescript-eslint/parser": "7.0.2",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
     "lodash.camelcase": "4.3.0",
     "lodash.upperfirst": "4.3.1",
-    "prettier": "3.0.0",
-    "rimraf": "5.0.1",
-    "rollup": "3.26.3",
+    "prettier": "3.2.5",
+    "rimraf": "5.0.5",
+    "rollup": "4.12.0",
     "rollup-plugin-html2": "4.0.0",
     "rollup-plugin-livereload": "2.0.5",
-    "rollup-plugin-serve": "2.0.2",
-    "rollup-plugin-typescript2": "0.35.0",
-    "typescript": "5.1.6",
+    "rollup-plugin-serve": "1.1.1",
+    "rollup-plugin-typescript2": "0.36.0",
+    "typescript": "5.3.3",
     "typescript-lit-html-plugin": "0.9.0"
   },
   "dependencies": {
-    "lit": "2.7.6",
-    "tslib": "2.6.1"
+    "lit": "3.1.2",
+    "tslib": "2.6.2"
   }
 }
